2009-12-01	Till Straumann <strauman@slac.stanford.edu>

	* new-exceptions/cpu.c, new-exceptions/cpu_asm.S,
	new-exceptions/bspsupport/ppc_exc_asm_macros.h,
	new-exceptions/bspsupport/ppc_exc_initialize.c,
	new-exceptions/bspsupport/vectors.h:
	Added AltiVec support (save/restore volatile vregs
	across exceptions).
	
2009-12-01	Till Straumann <strauman@slac.stanford.edu>

	* Makefile.am, mpc6xx/altivec: new directory implementing
	support for AltiVec context saving/restoring.

2009-12-01	Till Straumann <strauman@slac.stanford.edu>

	* mpc6xx/mmu/bat.c, mpc6xx/mmu/pte121.c: skip data-
	streaming (dssall etc.) instructions on PPC_PSIM
	currently (unimplemented by PSIM :-( ).

2009-11-17	Till Straumann <strauman@slac.stanford.edu>

	* new-exceptions/bspsupport/ppc_exc_categories.c:
	PSIM *must*not* hook SYS vector which is used e.g.,
	for firmware I/O.

	Added entries for AltiVec on PSIM.
	
2009-11-15	Till Straumann <strauman@slac.stanford.edu>

	* shared/include/cpuIdent.c: Set 604 features + altivec if
	running on PSIM.
	
2009-11-03  Thomas Doerfler  <Thomas.Doerfler@imd-systems.de>

	* shared/include/powerpc-utility.h, shared/include/byteorder.h,
	shared/include/cpuIdent.h: 
	add c++ declaration brackets
	* Makefile.am, mpc8260/clock: removed mpc8260 specific clock
	driver
	* e500/mmu/e500_mmu.h, e500/mmu/mmu.c,: removed "non-prototype"
	warning
	* mpc8260/timer/timer.c: moved extern declarations outside
	function body
	* mpc8xx/mmu/mmu.c: enable data cache when MMU is off to avoid
	cache confusion during exception entry

2009-11-02  Thomas Doerfler  <Thomas.Doerfler@imd-systems.de>

	* mpc8xx/mmu/mmu.c:
	enable data chache, when MMU is disabled

2009-10-30  Thomas Doerfler  <Thomas.Doerfler@imd-systems.de>

	* mpc6xx/clock/c_clock.c:
	moved timebase/decrementer access from cpukit to libcpu 

2009-10-29  Thomas Doerfler  <Thomas.Doerfler@imd-systems.de>

	* shared/include/powerpc-utility.h, mpc6xx/timer/timer.c: